update Project
